--- a/web/login.xhtml
+++ b/web/login.xhtml
@@ -17,14 +17,16 @@
         <h:body style="background-color: black;">
             <p:panel id="panelPrincipal">
                 <h:form id="formPrincipal" style="text-align: center; margin-left: 12%">
-                    <h:panelGrid columns="1" style="width: 40%; height: 40%; display:block; margin:auto;">
 
+                    <h:panelGrid columns="1" style="width: 40%; height: 40%; display:block; margin:auto;">
+                        <h:messages globalOnly="true" style="text-align: center;"/>
                         <h:outputText value="Usuario:" style="text-align: center;"/>
                         <p:inputText value="#{ctrLuffy.usuario}"
                                      style="text-align: center;"
                                      size="30"/>
                         <h:outputText value="Contraseña:" style="text-align: center;"/>
                         <p:inputText value="#{ctrLuffy.pass}"
+                                     style="text-align: center;"
                                      size="30"/>
 
                         <div style="display:block; width:100%; height:40px; overflow:hidden;"/>
